[package]
name = "chinese_checkers"
version = "0.1.0"
authors = ["Shaurya Shubham <shauryashubham1234567890@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0"
nalgebra = "0.18.1"

[dependencies.coffee]
version = "0.4"
features = ["vulkan"]
